 cnp-egress-pci-dss-1.2.3-block-cardholder-data-over-internet-aqrqjbd.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-egress-pci-dss-1.2.3-block-cardholder-data-over-internet-fa0kb87
  namespace: kube-system
spec:
  description: "do not allow direct connection outbound between cardholder to internet"
  endpointSelector: 
    matchLabels:
      controller-revision-hash: 56889964d4
      k8s-app: cilium
      pod-template-generation: 1
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
  namespace: kube-system
